--- a/Ejer8/nbproject/project.properties
+++ b/Ejer8/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ejer8.Ejer8
+main.class=ejer4bol8.Ejer4Bol8
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
